--- a/desafio_ajustado/index.html
+++ b/desafio_ajustado/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,11 +8,13 @@
     <title>Site modificação</title>
     <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
     <header id="header">
         <nav>
             <div class="logo">
-                <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSrEXVLFxNYugRy4SN2XTym54pYJ01emaKgdQ&s" alt="Logo">
+                <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSrEXVLFxNYugRy4SN2XTym54pYJ01emaKgdQ&s"
+                    alt="Logo">
             </div>
             <ul class="nav-links">
                 <li><a href="#home">Home</a></li>
@@ -32,7 +35,8 @@
 
     <section id="about" class="about-section">
         <h2>About Us</h2>
-        <p><strong>We create beautiful,</strong> innovative, and user-friendly websites that enhance <strong>your brand and engage</strong> your audience.</p>
+        <p><strong>We create beautiful,</strong> innovative, and user-friendly websites that enhance <strong>your brand
+                and engage</strong> your audience.</p>
     </section>
 
     <section id="services" class="services-section">
@@ -64,7 +68,8 @@
     </section>
 
     <div class="btnWhats">
-        <img src="https://static.vecteezy.com/system/resources/previews/018/930/564/original/whatsapp-logo-whatsapp-icon-whatsapp-transparent-free-png.png" alt="">
+        <img src="https://static.vecteezy.com/system/resources/previews/018/930/564/original/whatsapp-logo-whatsapp-icon-whatsapp-transparent-free-png.png"
+            alt="">
     </div>
 
     <footer>
@@ -72,9 +77,9 @@
     </footer>
 
     <script>
-                window.onscroll = function() {
+        window.onscroll = function () {
             const header = document.getElementById('header');
-            if (window.scrollY >10) {
+            if (window.scrollY > 10) {
                 header.classList.add('header-scrolled');
             } else {
                 header.classList.remove('header-scrolled');
@@ -82,4 +87,5 @@
         };
     </script>
 </body>
+
 </html>
